deploy/resources/greetings-f-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niche-greetings-f
  labels:
    app: niche-greetings-f
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: niche-greetings-f
      version: v1
  template:
    metadata:
      labels:
        app: niche-greetings-f
        version: v1
    spec:
      containers:
      - name: niche-greetings-f
        image: soline74/niche-greetings-f:dev-e3a43d4
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: niche-greetings-f
  labels:
    app: niche-greetings-f
spec:
  selector:
    app: niche-greetings-f
  ports:
  - name: http
    port: 8080
