deploy/resources/greetings-h-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niche-greetings-h
  labels:
    app: niche-greetings-h
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: niche-greetings-h
      version: v1
  template:
    metadata:
      labels:
        app: niche-greetings-h
        version: v1
    spec:
      containers:
      - name: niche-greetings-h
        image: soline74/niche-greetings-h:dev-e3a43d4
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        ports:
        - containerPort: 8080
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: niche-greetings-h
  labels:
    app: niche-greetings-h
spec:
  selector:
    app: niche-greetings-h
  ports:
  - name: http
    port: 8080
