deploy/resources/niche-web-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niche-web
  labels:
    app: niche-web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: niche-web
      version: v1
  template:
    metadata:
      labels: 
        app: niche-web
        version: v1
    spec:
      containers:
      - name: niche-web
        image: soline74/niche-web:dev-5c869b5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: niche-web
  labels:
    app: niche-web
    service: niche-web
spec:
    ports:
      - name: http
        port: 8081
    selector:
      app: niche-web
---
