deploy/resources/niche-api-dest.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: niche-api
spec:
  host: niche-api
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
    - name: v4
      labels:
        version: v4
