deploy/resources/niche-api-vs-8020.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
  - route:
    - destination:
        host: niche-api
        subset: v1
      weight: 80
    - destination:
        host: niche-api
        subset: v2
      weight: 20
