deploy/resources/niche-api-vs-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
  - fault:
      delay:
        fixedDelay: 5s
        percentage: 
          value: 100
    route:
    - destination:
        host: niche-api
        subset: v1
