deploy/resources/niche-api-vs-mirror.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
  - route:
    - destination:
        host: niche-api
        subset: v1
      weight: 100
    mirror:
      host: niche-api
      subset: v2
    mirror_percent: 20
