deploy/resources/niche-api-vs-v1-abort.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage: 
          value: 100
    route:
    - destination:
        host: niche-api
        subset: v1
