deploy/resources/niche-api-vs-v1-retry-not-finish.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: niche-api
            subset: v1
      retries:
        attempts: 3
        perTryTimeout: 2s
