deploy/resources/niche-api-vs-v4.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: niche-api
spec:
  hosts:
    - niche-api
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: niche-api
            subset: v4
